--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,23 +22,18 @@ requirements:
     - pip
     - setuptools_scm
     - setuptools_scm_git_archive
-    - pbr
   run:
     - python
-    - flake8 >=3.6.0,<4
-    - yamllint >=1.11.1,<2
     - ansible-lint >=4.0.2,<5
     - anyconfig ==0.9.7
-    - cerberus ==1.2
+    - cerberus <=1.3
     - click ==6.7
     - click-completion ==0.3.1
     - colorama ==0.3.9
     - cookiecutter ==1.6.0
-    - idna <2.8
-    - python-gilt ==1.2.1
-    - Jinja2 ==2.10
-    - pbr ==5.1.1
-    - pexpect ==4.6.0
+    - python-gilt >=1.2.1,< 2
+    - Jinja2 >=2.10.1
+    - pexpect >=4.6.0,< 5
     - psutil ==5.4.6
     - PyYAML ==3.13
     - sh ==1.12.14
