--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,24 +25,25 @@ requirements:
     - pbr
   run:
     - python
+    - ansible >=2.5
     - ansible-lint >=4.0.2,<5
-    - anyconfig ==0.9.7
-    - cerberus <=1.3
-    - click ==6.7
-    - click-completion ==0.3.1
-    - colorama ==0.3.9
-    - cookiecutter ==1.6.0
+    - anyconfig >=0.9.7
+    - cerberus <=1.3.1
+    - click >=6.7
+    - click-completion >=0.3.1
+    - colorama >=0.3.9
+    - cookiecutter >=1.6.0
     - python-gilt >=1.2.1,< 2
     - Jinja2 >=2.10.1
     - pexpect >=4.6.0,< 5
-    - psutil ==5.4.6
-    - PyYAML ==3.13
-    - sh ==1.12.14
-    - six ==1.11.0
-    - tabulate ==0.8.2
-    - testinfra ==1.19.0
-    - tree-format ==0.1.2
-    - yamllint
+    - psutil >=5.4.6,< 6
+    - PyYAML >=5.1,< 6
+    - sh >=1.12.14
+    - six >=1.11.0
+    - tabulate >=0.8.3
+    - testinfra >=3.0.5,< 5
+    - tree-format >=0.1.2
+    - yamllint >=1.15.0,< 2
 
 test:
   imports:
