--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - ansible >=2.5
     - ansible-lint >=4.0.2,<5
     - anyconfig >=0.9.7
+    - flake8 >=3.6.0
     - cerberus <=1.3.1
     - click >=6.7
     - click-completion >=0.3.1
@@ -35,6 +36,8 @@ requirements:
     - cookiecutter >=1.6.0
     - python-gilt >=1.2.1,< 2
     - Jinja2 >=2.10.1
+    - paramiko >=2.5.0,< 3
+    - pathlib2
     - pexpect >=4.6.0,< 5
     - psutil >=5.4.6,< 6
     - PyYAML >=5.1,< 6
