--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,33 +18,34 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
     - pip
-    - setuptools_scm
-    - setuptools_scm_git_archive
-    - pbr
+    - setuptools_scm >=1.15.0
+    - setuptools_scm_git_archive >=1.0
+
   run:
-    - python
-    - ansible >=2.5
-    - ansible-lint >=4.0.2,<5
-    - anyconfig >=0.9.7
-    - flake8 >=3.6.0
-    - cerberus <=1.3.1
-    - click >=6.7
-    - click-completion >=0.3.1
+    - python >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
+
+    - ansible >=2.8
+    - backports.functools_lru_cache
+    - cerberus >=1.3.1
+    - click >=7.0
+    - click-completion >=0.5.1
+    - click-help-colors >=0.6
     - colorama >=0.3.9
     - cookiecutter >=1.6.0
     - python-gilt >=1.2.1,< 2
     - Jinja2 >=2.10.1
     - paramiko >=2.5.0,< 3
-    - pathlib2
+    - pathlib2 # [py<32]
     - pexpect >=4.6.0,< 5
-    - psutil >=5.4.6,< 6
+    - pluggy >=0.7.1,< 1.0
+    - pre-commit >=1.17.0,< 2
     - PyYAML >=5.1,< 6
     - sh >=1.12.14
     - six >=1.11.0
-    - tabulate >=0.8.3
-    - testinfra >=3.0.5,< 5
+    - subprocess32 # [py<35]
+    - tabulate >=0.8.4
     - tree-format >=0.1.2
     - yamllint >=1.15.0,< 2
 
