--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ build:
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   entry_points:
     - molecule = molecule.__main__:main
-  skip: True  # [py < 36]
+  skip: True  # [py < 37 or win]
 
 requirements:
   host:
