--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
   run:
     # core dependencies
     - python
+    - ansible-lint >=5.0.5
     - cerberus >=1.3.1
     - click >=7.0,<8.0
     - click-completion >=0.5.1
@@ -63,10 +64,9 @@ requirements:
     - pytest >=6.1.2
 
     # lint
-    - ansible-lint >=4.2.0,<5
-    - flake8 >=3.6.0
+    - flake8 >=3.8.4
     - pre-commit >=1.21.0
-    - yamllint >=1.15.0
+    - yamllint
 
 test:
   imports:
