--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
   run:
     # core dependencies
     - python
+    - ansible-compat
     - ansible-lint >=5.0.10
     - cerberus >=1.3.1
     - click >=8.0,<9
