--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ requirements:
     - packaging
     - paramiko >=2.5.0,<3
     - pluggy >=0.7.1,<2
-    - PyYAML >=5.1,< 6
+    - PyYAML >=5.1
     - rich >=9.5.1
 
     # ansible
