--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,35 +27,17 @@ requirements:
   run:
     # core dependencies
     - python
-    - ansible-compat
-    - ansible-lint >=5.0.10
-    - cerberus >=1.3.1
+    - ansible-compat >=2.1.0
+    - cerberus >=1.3.1,!=1.3.3,!=1.3.4
     - click >=8.0,<9
     - click-help-colors >=0.9
     - cookiecutter >=1.7.3
-    - enrich  >=1.2.5
-    - Jinja2 >=2.10.1
+    - enrich  >=1.2.7
+    - Jinja2 >=2.11.3
     - packaging
-    - paramiko >=2.5.0,<3
     - pluggy >=0.7.1,<2
     - PyYAML >=5.1
     - rich >=9.5.1
-
-    # ansible
-    - ansible >=2.10
-
-    # test
-    - ansi2html >=1.6.0
-    - pexpect >=4.8.0,<5
-    - pytest-cov >=2.10.1
-    - pytest-helpers-namespace >=2019.1.8
-    - pytest-html >=3.0.0
-    - pytest-mock >=3.3.1
-    - pytest-plus >=0.2
-    - pytest-testinfra >=6.1.0
-    - pytest-verbose-parametrize >=1.7.0
-    - pytest-xdist >=2.1.0
-    - pytest >=6.1.2
 
     # lint
     - flake8 >=3.8.4
