--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     # core dependencies
     - python
     - ansible-compat >=2.1.0
+    - ansible-core
     - cerberus >=1.3.1,!=1.3.3,!=1.3.4
     - click >=8.0,<9
     - click-help-colors >=0.9
